Fix missing background image

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@
 body {
   color: rgba(255, 255, 255);
   
-  background-image: url("background.jpg");
+  background-image: url("./../public/background.jpg");
   background-repeat: repeat-y;
   background-size: cover;
   background-position: top;
